deploy: 6d543690fb340dd85cdadfafe86e3a6b351ad81c

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98729705",
+   "id": "87161c8c",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecfb6f2c",
+   "id": "4a6b2ada",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "911de88f",
+   "id": "67586b0b",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24a052a2",
+   "id": "48870f07",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34d0aa33",
+   "id": "5b306f8c",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "198589c8",
+   "id": "096e527d",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "80190fd5",
+   "id": "d8d3efa2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:20.160004Z",
-     "iopub.status.busy": "2024-06-15T10:22:20.159812Z",
-     "iopub.status.idle": "2024-06-15T10:22:24.325691Z",
-     "shell.execute_reply": "2024-06-15T10:22:24.325076Z"
+     "iopub.execute_input": "2024-06-15T10:34:29.087575Z",
+     "iopub.status.busy": "2024-06-15T10:34:29.087360Z",
+     "iopub.status.idle": "2024-06-15T10:34:33.340397Z",
+     "shell.execute_reply": "2024-06-15T10:34:33.339827Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bc1a343",
+   "id": "6c66aef7",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5fd8bc8",
+   "id": "e555fa1f",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9839a5e",
+   "id": "dbf42ae9",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c80b1673",
+   "id": "cc0571ef",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6e67bb8",
+   "id": "bd7c1414",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a1e916d",
+   "id": "6ffb9f12",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5a65f5e",
+   "id": "d8c9a448",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcde124a",
+   "id": "bbc6e020",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a0334fa4",
+   "id": "ec8aba45",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:24.328716Z",
-     "iopub.status.busy": "2024-06-15T10:22:24.328189Z",
-     "iopub.status.idle": "2024-06-15T10:22:26.152675Z",
-     "shell.execute_reply": "2024-06-15T10:22:26.152072Z"
+     "iopub.execute_input": "2024-06-15T10:34:33.343342Z",
+     "iopub.status.busy": "2024-06-15T10:34:33.342745Z",
+     "iopub.status.idle": "2024-06-15T10:34:35.215278Z",
+     "shell.execute_reply": "2024-06-15T10:34:35.214692Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64888e2d",
+   "id": "1f91d851",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c019cf52",
+   "id": "a36d7c94",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:26.155204Z",
-     "iopub.status.busy": "2024-06-15T10:22:26.154794Z",
-     "iopub.status.idle": "2024-06-15T10:22:26.158672Z",
-     "shell.execute_reply": "2024-06-15T10:22:26.157930Z"
+     "iopub.execute_input": "2024-06-15T10:34:35.217690Z",
+     "iopub.status.busy": "2024-06-15T10:34:35.217493Z",
+     "iopub.status.idle": "2024-06-15T10:34:35.221133Z",
+     "shell.execute_reply": "2024-06-15T10:34:35.220496Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6577587e",
+   "id": "60705f20",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a266049c",
+   "id": "fa9883b7",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9354d51",
+   "id": "346a1041",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eede5d0",
+   "id": "86c9e9d2",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "04240b26",
+   "id": "ed8dd88e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:26.160929Z",
-     "iopub.status.busy": "2024-06-15T10:22:26.160740Z",
-     "iopub.status.idle": "2024-06-15T10:22:26.204091Z",
-     "shell.execute_reply": "2024-06-15T10:22:26.203521Z"
+     "iopub.execute_input": "2024-06-15T10:34:35.223768Z",
+     "iopub.status.busy": "2024-06-15T10:34:35.223192Z",
+     "iopub.status.idle": "2024-06-15T10:34:35.269041Z",
+     "shell.execute_reply": "2024-06-15T10:34:35.268441Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4611d89b",
+   "id": "bcb4bc04",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3951ff20",
+   "id": "3c0f90c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:26.206630Z",
-     "iopub.status.busy": "2024-06-15T10:22:26.206291Z",
-     "iopub.status.idle": "2024-06-15T10:22:26.271467Z",
-     "shell.execute_reply": "2024-06-15T10:22:26.270908Z"
+     "iopub.execute_input": "2024-06-15T10:34:35.271543Z",
+     "iopub.status.busy": "2024-06-15T10:34:35.271173Z",
+     "iopub.status.idle": "2024-06-15T10:34:35.338433Z",
+     "shell.execute_reply": "2024-06-15T10:34:35.337800Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab7c480f",
+   "id": "2bedd957",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "121c44e5",
+   "id": "68af5181",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "943dc20f",
+   "id": "e0126fd4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:26.273966Z",
-     "iopub.status.busy": "2024-06-15T10:22:26.273589Z",
-     "iopub.status.idle": "2024-06-15T10:22:26.302974Z",
-     "shell.execute_reply": "2024-06-15T10:22:26.302397Z"
+     "iopub.execute_input": "2024-06-15T10:34:35.341240Z",
+     "iopub.status.busy": "2024-06-15T10:34:35.340731Z",
+     "iopub.status.idle": "2024-06-15T10:34:35.370438Z",
+     "shell.execute_reply": "2024-06-15T10:34:35.369826Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "250ee1bc",
+   "id": "15ddfe19",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c246896e",
+   "id": "fb0ea81f",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aac391d1",
+   "id": "807621be",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c7388d2",
+   "id": "7d830ac8",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eec360a9",
+   "id": "2039a030",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aefab9cb",
+   "id": "70ab6576",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:26.305797Z",
-     "iopub.status.busy": "2024-06-15T10:22:26.305290Z",
-     "iopub.status.idle": "2024-06-15T10:22:26.309786Z",
-     "shell.execute_reply": "2024-06-15T10:22:26.309164Z"
+     "iopub.execute_input": "2024-06-15T10:34:35.373308Z",
+     "iopub.status.busy": "2024-06-15T10:34:35.372840Z",
+     "iopub.status.idle": "2024-06-15T10:34:35.377432Z",
+     "shell.execute_reply": "2024-06-15T10:34:35.376857Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26fabcf0",
+   "id": "06417f66",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "13574881",
+   "id": "340a5ac3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:26.312287Z",
-     "iopub.status.busy": "2024-06-15T10:22:26.311931Z",
-     "iopub.status.idle": "2024-06-15T10:22:26.314948Z",
-     "shell.execute_reply": "2024-06-15T10:22:26.314307Z"
+     "iopub.execute_input": "2024-06-15T10:34:35.379879Z",
+     "iopub.status.busy": "2024-06-15T10:34:35.379515Z",
+     "iopub.status.idle": "2024-06-15T10:34:35.382702Z",
+     "shell.execute_reply": "2024-06-15T10:34:35.382133Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99bfcea3",
+   "id": "8658260b",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7463fc57",
+   "id": "d7c89674",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:26.317131Z",
-     "iopub.status.busy": "2024-06-15T10:22:26.316798Z",
-     "iopub.status.idle": "2024-06-15T10:22:28.733783Z",
-     "shell.execute_reply": "2024-06-15T10:22:28.733119Z"
+     "iopub.execute_input": "2024-06-15T10:34:35.385180Z",
+     "iopub.status.busy": "2024-06-15T10:34:35.384804Z",
+     "iopub.status.idle": "2024-06-15T10:34:37.841266Z",
+     "shell.execute_reply": "2024-06-15T10:34:37.840624Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1e45d46",
+   "id": "6cb375c5",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e99d597",
+   "id": "8d9794fc",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72724c59",
+   "id": "6c4acaf0",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "499c96e7",
+   "id": "83998525",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "78ce04f0",
+   "id": "a0fab15e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:28.736294Z",
-     "iopub.status.busy": "2024-06-15T10:22:28.735943Z",
-     "iopub.status.idle": "2024-06-15T10:22:28.739776Z",
-     "shell.execute_reply": "2024-06-15T10:22:28.739146Z"
+     "iopub.execute_input": "2024-06-15T10:34:37.844169Z",
+     "iopub.status.busy": "2024-06-15T10:34:37.843632Z",
+     "iopub.status.idle": "2024-06-15T10:34:37.847610Z",
+     "shell.execute_reply": "2024-06-15T10:34:37.846956Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f0e0c62eac0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f0764bbaac0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a18201a",
+   "id": "f4d1c0b7",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20aa3ecc",
+   "id": "a8e534a8",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccabf799",
+   "id": "4725ce37",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76a056d2",
+   "id": "c19b0dac",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ed1c2544",
+   "id": "2d73e2e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:28.742253Z",
-     "iopub.status.busy": "2024-06-15T10:22:28.741897Z",
-     "iopub.status.idle": "2024-06-15T10:22:28.745130Z",
-     "shell.execute_reply": "2024-06-15T10:22:28.744430Z"
+     "iopub.execute_input": "2024-06-15T10:34:37.849953Z",
+     "iopub.status.busy": "2024-06-15T10:34:37.849585Z",
+     "iopub.status.idle": "2024-06-15T10:34:37.852830Z",
+     "shell.execute_reply": "2024-06-15T10:34:37.852235Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a322ee74",
+   "id": "f7290034",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:22:28.747428Z",
-     "iopub.status.busy": "2024-06-15T10:22:28.747058Z",
-     "iopub.status.idle": "2024-06-15T10:22:29.817054Z",
-     "shell.execute_reply": "2024-06-15T10:22:29.816421Z"
+     "iopub.execute_input": "2024-06-15T10:34:37.855321Z",
+     "iopub.status.busy": "2024-06-15T10:34:37.854796Z",
+     "iopub.status.idle": "2024-06-15T10:34:38.928633Z",
+     "shell.execute_reply": "2024-06-15T10:34:38.928060Z"
     }
    },
    "outputs": [
