--- a/tutorials/la_lindblad.ipynb
+++ b/tutorials/la_lindblad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c5b69a04",
+   "id": "600849b3",
    "metadata": {},
    "source": [
     "# Dissipation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3adf83be",
+   "id": "9b2e2211",
    "metadata": {},
    "source": [
     "GRANAD supports two dissipation models: A phenomenological dissipator, given by"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cd9c9b9",
+   "id": "1520e26f",
    "metadata": {},
    "source": [
     "$$\\mathcal{D}[\\rho - \\rho_0] = \\frac{-1}{\\tau} (\\rho - \\rho_0)$$"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f07977b1",
+   "id": "c51969e4",
    "metadata": {},
    "source": [
     "where $\\rho_0$ is the equilibrium density matrix and $1 / \\tau$ a phenomenological relaxation rate."
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f639cda7",
+   "id": "3510d477",
    "metadata": {},
    "source": [
     "To model dissipation in greater depth, GRANAD makes available also a Lindblad dissipation model. The mathematical details are laid out in [Pelc et al., 2024](https://link.aps.org/doi/10.1103/PhysRevA.109.022237) and revolve around the following equation"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61582a36",
+   "id": "0dc1aa05",
    "metadata": {},
    "source": [
     "$$\\gamma_{ij}(t) = \\gamma_{ij} \\cdot f(\\rho(t))$$"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce883753",
+   "id": "3644c088",
    "metadata": {},
    "source": [
     "where $\\gamma_{ij}$ is the transition rate from state i to state j and $f$ is a relaxation functional to counteract problems related to the Pauli principle breaking that might occur in the single-particle model.\n",
@@ -59,15 +59,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37a6890",
+   "id": "d8b4330b",
    "metadata": {},
    "source": [
-    "$$f(x) = \\frac{1}{1 + e^{\\beta \\cdot(2 - x)}$$"
+    "$$f(x) = \\frac{1}{1 + e^{\\beta \\cdot(2 - x)}}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b781b01",
+   "id": "6dbbf948",
    "metadata": {},
    "source": [
     "where x is the occupation and $\\beta$ a temperature-like control parameter to mimick a smooth Heaviside function, defaulting to 1e-6."
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3660ff29",
+   "id": "6597838c",
    "metadata": {},
    "source": [
     "## Lindblad vs Phenomenological Relaxation dynamics of the Metallic Chain"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b624cb1d",
+   "id": "dcff2a3a",
    "metadata": {},
    "source": [
     "In the following, we will consider a metallic chain with a uniform transition rate, such that of $\\gamma_{ij} = \\gamma$ for all $i \\gt j$. We consider an initially excited state of one electron in the HOMO-LUMO+1 transition."
@@ -92,13 +92,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f5318cbe",
+   "id": "45b90d7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:24:07.947629Z",
-     "iopub.status.busy": "2024-06-15T10:24:07.947442Z",
-     "iopub.status.idle": "2024-06-15T10:24:12.540077Z",
-     "shell.execute_reply": "2024-06-15T10:24:12.539433Z"
+     "iopub.execute_input": "2024-06-15T10:36:20.711774Z",
+     "iopub.status.busy": "2024-06-15T10:36:20.711580Z",
+     "iopub.status.idle": "2024-06-15T10:36:25.727900Z",
+     "shell.execute_reply": "2024-06-15T10:36:25.727229Z"
     }
    },
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fdefe1a",
+   "id": "ab5d0b90",
    "metadata": {},
    "source": [
     "We can now build the matrix of transition rates with a uniform $\\gamma = 10$ as follows"
@@ -132,13 +132,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bc57052e",
+   "id": "33b0fb84",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:24:12.542489Z",
-     "iopub.status.busy": "2024-06-15T10:24:12.542286Z",
-     "iopub.status.idle": "2024-06-15T10:24:12.593374Z",
-     "shell.execute_reply": "2024-06-15T10:24:12.592762Z"
+     "iopub.execute_input": "2024-06-15T10:36:25.730680Z",
+     "iopub.status.busy": "2024-06-15T10:36:25.730265Z",
+     "iopub.status.idle": "2024-06-15T10:36:25.784063Z",
+     "shell.execute_reply": "2024-06-15T10:36:25.783424Z"
     }
    },
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2901a273",
+   "id": "dec7bf49",
    "metadata": {},
    "source": [
     "We can inspect the lumo-homo transition rate, for example, as"
@@ -159,13 +159,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d971d7fc",
+   "id": "a1906021",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:24:12.596333Z",
-     "iopub.status.busy": "2024-06-15T10:24:12.595888Z",
-     "iopub.status.idle": "2024-06-15T10:24:12.623817Z",
-     "shell.execute_reply": "2024-06-15T10:24:12.623212Z"
+     "iopub.execute_input": "2024-06-15T10:36:25.787077Z",
+     "iopub.status.busy": "2024-06-15T10:36:25.786571Z",
+     "iopub.status.idle": "2024-06-15T10:36:25.814182Z",
+     "shell.execute_reply": "2024-06-15T10:36:25.813657Z"
     }
    },
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "242de9cc",
+   "id": "7a5ac2a8",
    "metadata": {},
    "source": [
     "GRANAD dispatches the non-Hermitian functional depending on the `relaxation_rate` input type. If you pass a float, GRANAD uses the decoherence approximation. If you pass an array, it uses the Lindblad dissipator with a (smooth approximation of) the Heaviside function as the saturation functional. Modifications of the relaxation functional are discussed below."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c275c38e",
+   "id": "5759f32d",
    "metadata": {},
    "source": [
     "We now integrate the master equation. "
@@ -200,13 +200,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4b540610",
+   "id": "68166c4f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:24:12.626379Z",
-     "iopub.status.busy": "2024-06-15T10:24:12.625946Z",
-     "iopub.status.idle": "2024-06-15T10:24:14.039126Z",
-     "shell.execute_reply": "2024-06-15T10:24:14.038484Z"
+     "iopub.execute_input": "2024-06-15T10:36:25.816620Z",
+     "iopub.status.busy": "2024-06-15T10:36:25.816245Z",
+     "iopub.status.idle": "2024-06-15T10:36:27.244417Z",
+     "shell.execute_reply": "2024-06-15T10:36:27.243809Z"
     }
    },
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "237b4bbb",
+   "id": "a269258b",
    "metadata": {},
    "source": [
     "We plot the changes in single-particle energy occupations as a function of time by defining the `plot_labels` argument as the energies"
@@ -244,13 +244,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d6669581",
+   "id": "15db260b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:24:14.041717Z",
-     "iopub.status.busy": "2024-06-15T10:24:14.041351Z",
-     "iopub.status.idle": "2024-06-15T10:24:14.474183Z",
-     "shell.execute_reply": "2024-06-15T10:24:14.473593Z"
+     "iopub.execute_input": "2024-06-15T10:36:27.246794Z",
+     "iopub.status.busy": "2024-06-15T10:36:27.246438Z",
+     "iopub.status.idle": "2024-06-15T10:36:27.653023Z",
+     "shell.execute_reply": "2024-06-15T10:36:27.652401Z"
     }
    },
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f448a7f",
+   "id": "8de9af68",
    "metadata": {},
    "source": [
     "A comparison to to the phenomenological approach can be obtained by"
@@ -281,13 +281,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b56a5f42",
+   "id": "eac7f844",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:24:14.476547Z",
-     "iopub.status.busy": "2024-06-15T10:24:14.476350Z",
-     "iopub.status.idle": "2024-06-15T10:24:15.476960Z",
-     "shell.execute_reply": "2024-06-15T10:24:15.476422Z"
+     "iopub.execute_input": "2024-06-15T10:36:27.655771Z",
+     "iopub.status.busy": "2024-06-15T10:36:27.655241Z",
+     "iopub.status.idle": "2024-06-15T10:36:28.649584Z",
+     "shell.execute_reply": "2024-06-15T10:36:28.648961Z"
     }
    },
    "outputs": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a965e21",
+   "id": "9aea02d6",
    "metadata": {},
    "source": [
     "By comparing the two plots above, we observe a set of qualitative differences, discussed in greater detail in the [corresponding paper](https://link.aps.org/doi/10.1103/PhysRevA.109.022237)."
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93aedc89",
+   "id": "a491d882",
    "metadata": {},
    "source": [
     "GRANAD imposes a degeneracy tolerance on the states. This means that all states separated by less than a numerical threshold are considered degenerate. The threshold is specified as variable `flake.params.eps`."
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6494e8b",
+   "id": "77ba5357",
    "metadata": {},
    "source": [
     "## Modifying the saturation functional"
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9431bf6",
+   "id": "d9837b79",
    "metadata": {},
    "source": [
     "The saturation functional can be customized by defining a saturation function and modifying the dissipator dict (for more information, please consult the tutorial on custom time evolution)."
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3e04e97",
+   "id": "ca53889c",
    "metadata": {},
    "source": [
     "1. initialize a dissipator with your custom relaxation functional\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "007b5d5f",
+   "id": "68d40ea8",
    "metadata": {},
    "source": [
     "To illustrate the necessity of introducing a saturation functional, we consider the case where no saturation is applied, i.e. $f(x) = 1$"
@@ -377,13 +377,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "66e58f52",
+   "id": "b7d0997d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:24:15.479568Z",
-     "iopub.status.busy": "2024-06-15T10:24:15.479172Z",
-     "iopub.status.idle": "2024-06-15T10:24:17.424224Z",
-     "shell.execute_reply": "2024-06-15T10:24:17.423592Z"
+     "iopub.execute_input": "2024-06-15T10:36:28.652271Z",
+     "iopub.status.busy": "2024-06-15T10:36:28.651896Z",
+     "iopub.status.idle": "2024-06-15T10:36:30.644867Z",
+     "shell.execute_reply": "2024-06-15T10:36:30.644257Z"
     }
    },
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b05a99e",
+   "id": "6e749c6d",
    "metadata": {},
    "source": [
     "We observe an almost complete collapse into the single-particle ground state, which can be revealed to be an Coulomb interaction effect."
@@ -439,13 +439,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e2f7562e",
+   "id": "49114e9a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:24:17.426724Z",
-     "iopub.status.busy": "2024-06-15T10:24:17.426345Z",
-     "iopub.status.idle": "2024-06-15T10:24:18.455338Z",
-     "shell.execute_reply": "2024-06-15T10:24:18.454725Z"
+     "iopub.execute_input": "2024-06-15T10:36:30.647543Z",
+     "iopub.status.busy": "2024-06-15T10:36:30.647132Z",
+     "iopub.status.idle": "2024-06-15T10:36:31.712417Z",
+     "shell.execute_reply": "2024-06-15T10:36:31.711792Z"
     }
    },
    "outputs": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81c12585",
+   "id": "008476ac",
    "metadata": {},
    "source": [
     "## Wigner-Weisskopf transition rates"
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ee0fa08",
+   "id": "b433f702",
    "metadata": {},
    "source": [
     "GRANAD offers the single-particle Wigner-Weisskopf transition rates directly in a matrix form "
@@ -504,13 +504,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d55945f8",
+   "id": "5f4dee7d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:24:18.457882Z",
-     "iopub.status.busy": "2024-06-15T10:24:18.457469Z",
-     "iopub.status.idle": "2024-06-15T10:24:18.732743Z",
-     "shell.execute_reply": "2024-06-15T10:24:18.732164Z"
+     "iopub.execute_input": "2024-06-15T10:36:31.715061Z",
+     "iopub.status.busy": "2024-06-15T10:36:31.714685Z",
+     "iopub.status.idle": "2024-06-15T10:36:32.050864Z",
+     "shell.execute_reply": "2024-06-15T10:36:32.050228Z"
     }
    },
    "outputs": [
